# data-hub

./: .actrc  .flake8  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  go.work  go.work.sum  migrations.json  mkdocs.yml  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  workspace.json
.devcontainer/: Dockerfile  devcontainer.json  (+1 more)
apps/infra/python/aws/cdktf-organizer/: README.md  app.py  cdktf.json  project.json  pyproject.toml
apps/infra/python/aws/cdktf-organizer/cdktf.out/: manifest.json
apps/infra/python/aws/cdktf-organizer/config/dev/: config.yaml
apps/infra/python/aws/cdktf-organizer/stacks/storage/: stacks.py
apps/ingestors/financial/mercadobitcoin/tickers/: Dockerfile  README.md  project.json  pyproject.toml
apps/ingestors/financial/mercadobitcoin/tickers/bot/: __init__.py  items.py  middlewares.py  models.py  pipelines.py  run.py  settings.py
apps/ingestors/financial/mercadobitcoin/tickers/bot/spiders/: parser.py  spider.py  static.py
apps/ingestors/financial/mercadobitcoin/tickers/bot/spiders/proto/: spider.proto  spider_pb2.py
apps/ingestors/financial/mercadobitcoin/tickers/bot/tests/bot/: test_parser.py
apps/ingestors/financial/mercadobitcoin/tickers/bot/tests/reference_files/: raw-tickers.json  tickers.json
apps/ingestors/financial/mercadobitcoin/tickers/data/: output.jsonl
apps/ingestors/financial/mercadobitcoin/tickers/dist-test/: mercadobitcoin_tickers-1.0.0-py3-none-any.whl
apps/ingestors/financial/mercadobitcoin/tickers/schemas/: output.json
apps/ingestors/financial/mercadobitcoin/trades/: .gitignore  README.md  project.json  pyproject.toml
apps/ingestors/financial/mercadobitcoin/trades/bot/: __init__.py  config.py  pipelines.py  rabbitmq.py  settings.py
apps/ingestors/financial/mercadobitcoin/trades/bot/spiders/: parser.py  spider.py  static.py
apps/ingestors/media/youtube/videos/: README.md  project.json  pyproject.toml
apps/ingestors/media/youtube/videos/bot/: __init__.py  index.py
apps/ingestors/media/youtube/videos/tests/: test_index.py
apps/self-docs/docs-service/: README.md  project.json  pyproject.toml
apps/self-docs/docs-service/app/: __init__.py
apps/spark-services/spark-event-stream/: Makefile  README.md  gpt.md  project.json  pyproject.toml
apps/spark-services/spark-event-stream/configs/jobs/: job-id.json  new-job-id.json
apps/spark-services/spark-event-stream/event_stream/: main.py
apps/spark-services/spark-event-stream/event_stream/config/: config.py
apps/spark-services/spark-event-stream/event_stream/controller/: controller.py
apps/spark-services/spark-event-stream/event_stream/jobs/: job_id.py  new_job_id.py
apps/spark-services/spark-event-stream/event_stream/messaging/rabbitmq/: consumer.py
apps/spark-services/spark-event-stream/event_stream/utils/: utils.py
apps/spark-services/spark-event-stream/tests/: test_main.py
libs/infra/python/cdk-organizer/: README.md  project.json  pyproject.toml
libs/infra/python/cdk-organizer/cdk_organizer/: stack_group.py
libs/ingestors/base-crawler/: README.md  basecrawler.py  project.json  pyproject.toml
libs/ingestors/base-crawler/crawler/: config.py  crawler.py  loop.py  settings.py
libs/ingestors/base-crawler/crawler/core/: basespider.py
libs/ingestors/base-crawler/crawler/spiders/bot/: parser.py  spider.py  static.py
libs/ingestors/base-crawler/tests/: test_index.py
libs/ingestors/base-crawler/tests/debug/: log.txt
libs/ingestors/base-ingestor/botargparse/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/botargparse/botargparse/: argparse.py
libs/ingestors/base-ingestor/botargparse/tests/: test_argparse.py
libs/ingestors/base-ingestor/botlog/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/botlog/botlog/: log.py
libs/ingestors/base-ingestor/botlog/tests/: test_log.py
libs/ingestors/base-ingestor/botqueue/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/botqueue/botqueue/: queue.py
libs/ingestors/base-ingestor/botqueue/tests/: test_index.py
libs/ingestors/base-ingestor/botstatscollector/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/botstatscollector/botstatscollector/: base.py  dummy_collector.py  factory.py  statsd_collector.py
libs/ingestors/base-ingestor/botstatscollector/tests/: base_test.py  factory_test.py  stasd_collector_test.py
libs/ingestors/base-ingestor/pyoutput/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/pyoutput/pyoutput/: output.py
libs/ingestors/base-ingestor/pyrepository/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/pysd/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/pysd/pysd/: service_discovery.py
libs/ingestors/base-ingestor/pysd/tests/: test_service_discovery.py
libs/ingestors/base-ingestor/pystatus/: README.md  project.json  pyproject.toml
libs/ingestors/base-ingestor/pystatus/pystatus/: client_error.py  errors.py  server_error.py  success.py
libs/ingestors/base-ingestor/tor-proxy/: README.md  project.json  pyproject.toml  torrc.default
libs/ingestors/base-ingestor/tor-proxy/torproxy/: ip.py
libs/ingestors/base-parser/: README.md  project.json  pyproject.toml
libs/ingestors/base-parser/baseparser/: __init__.py  parser.py
libs/ingestors/base-spider/: README.md  project.json  pyproject.toml  scrapy.cfg
libs/ingestors/base-spider/basespider/: __init__.py
libs/ingestors/base-spider/ingestor/: items.py  middlewares.py  pipelines.py  settings.py
libs/ingestors/base-spider/ingestor/spiders/: basespider.py
libs/ingestors/base-spider/ingestor/tests/: reference_files.py
libs/nx-plugins/python-tools/src/generators/create-project/files/: READEME.md  README.md  pyproject.toml
libs/shared/python-tools/development/: project.json  pyproject.toml
libs/shared/python-tools/development/shared_development/: __init__.py
libs/shared/python-tools/development/shared_development/hooks/: __init__.py
libs/shared/python-tools/development/tests/: test_report.py
(+259 files in other folders)
