[tool.poetry]
name = "data-hub"
version = "0.1.0"
description = ""
authors = [ "FabioCaffarello <fabio.caffarello@gmail.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

    [tool.poetry.dependencies.shared-core]
    path = "libs/shared/python-tools/core"
    develop = true

    [tool.poetry.dependencies.shared-development]
    path = "libs/shared/python-tools/development"
    develop = true

    [tool.poetry.dependencies.docs-service]
    path = "apps/self-docs/docs-service"
    develop = true

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
