[tool.poetry]
name = "data-hub"
version = "0.1.0"
description = ""
authors = [ "FabioCaffarello <fabio.caffarello@gmail.com>" ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

    [tool.poetry.dependencies.shared-core]
    path = "libs/shared/python_tools/core"
    develop = true

    [tool.poetry.dependencies.base-spider]
    path = "libs/ingestors/base-spider"
    develop = true

    [tool.poetry.dependencies.mercadobitcoin-trades]
    path = "apps/ingestors/financial/mercadobitcoin/trades"
    develop = true

    [tool.poetry.dependencies.base-parser]
    path = "libs/ingestors/base-parser"
    develop = true

    [tool.poetry.dependencies.mercadobitcoin-tickers]
    path = "apps/ingestors/financial/mercadobitcoin/tickers"
    develop = true

    [tool.poetry.dependencies.youtube-videos]
    path = "apps/ingestors/media/youtube/videos"
    develop = true

    [tool.poetry.dependencies.base-crawler]
    path = "libs/ingestors/base-crawler"
    develop = true

    [tool.poetry.dependencies.botargparse]
    path = "libs/ingestors/base-ingestor/botargparse"
    develop = true

    [tool.poetry.dependencies.botlog]
    path = "libs/ingestors/base-ingestor/botlog"
    develop = true

    [tool.poetry.dependencies.botqueue]
    path = "libs/ingestors/base-ingestor/botqueue"
    develop = true

    [tool.poetry.dependencies.pysd]
    path = "libs/ingestors/base-ingestor/pysd"
    develop = true

    [tool.poetry.dependencies.botstatscollector]
    path = "libs/ingestors/base-ingestor/botstatscollector"
    develop = true

    [tool.poetry.dependencies.pyoutput]
    path = "libs/ingestors/base-ingestor/pyoutput"
    develop = true

    [tool.poetry.dependencies.pystatus]
    path = "libs/ingestors/base-ingestor/pystatus"
    develop = true

    [tool.poetry.dependencies.pydebug]
    path = "libs/ingestors/base-ingestor/pydebug"
    develop = true

    [tool.poetry.dependencies.pyrepository]
    path = "libs/ingestors/base-ingestor/pyrepository"
    develop = true

    [tool.poetry.dependencies.torproxy]
    path = "libs/ingestors/base-ingestor/tor-proxy"
    develop = true

    [tool.poetry.dependencies.templates]
    path = "apps/infra/python/aws/cdktf-organizer"
    develop = true

    [tool.poetry.dependencies.cdk_organizer]
    path = "libs/infra/python/cdk-organizer"
    develop = true

    [tool.poetry.dependencies.event_stream]
    path = "apps/spark-services/spark-event-stream"
    develop = true

[tool.poetry.group.dev.dependencies.shared-development]
path = "libs/shared/python_tools/development"
develop = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.2"
mkdocs-material-extensions = "^1.1.1"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = "^0.19.1"
mkdocstrings-python = "^0.8.3"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-include-markdown-plugin = "^4.0.3"
mkdocs-swagger-ui-tag = "^0.5.1"
plantuml-markdown = "^3.8.0"

[build-system]
requires = [ "poetry-core==1.1.0b3" ]
build-backend = "poetry.core.masonry.api"
