[tool.coverage.run]
branch = true
source = [ "event_stream" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/apps/spark-services/spark-event-stream/html' --cov-report xml:'../../../coverage/apps/spark-services/spark-event-stream/coverage.xml' --junitxml='../../../reports/apps/spark-services/spark-event-stream/unittests/junit.xml' --html='../../../reports/apps/spark-services/spark-event-stream/unittests/html/index.html'"

[tool.poetry]
name = "event_stream"
version = "1.0.0"
description = ""
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "event_stream"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  inflection = "^0.5.1"
  pika = "^1.3.2"
  aio-pika = "^9.1.4"



[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
