[tool.coverage.run]
branch = true
source = [ "botstatscollector" ]
omit = ["botstatscollector/dummy_collector.py"]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=90 --cov-report html:'../../../../coverage/libs/ingestors/base-ingestor/botstatscollector/html' --cov-report xml:'../../../../coverage/libs/ingestors/base-ingestor/botstatscollector/coverage.xml' --junitxml='../../../../reports/libs/ingestors/base-ingestor/botstatscollector/unittests/junit.xml' --html='../../../../reports/libs/ingestors/base-ingestor/botstatscollector/unittests/html/index.html'"

[tool.poetry]
name = "botstatscollector"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "botstatscollector"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  statsd = "^4.0.1"

[tool.poetry.group.dev.dependencies.shared-development]
path = "../../../shared/python_tools/development"
develop = true

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
