[tool.coverage.run]
branch = true
source = [ "<%= moduleName %>" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'<%= offsetFromRoot %>coverage/<%= projectRoot %>/html' --cov-report xml:'<%= offsetFromRoot %>coverage/<%= projectRoot %>/coverage.xml' --junitxml='<%= offsetFromRoot %>reports/<%= projectRoot %>/unittests/junit.xml' --html='<%= offsetFromRoot %>reports/<%= projectRoot %>/unittests/html/index.html'"

[tool.poetry]
name = "<%= packageName %>"
version = "1.0.0"
description = "<%= description %>"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "<%= moduleName %>"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

[build-system]
requires = ["poetry-core==1.1.0b3"]
build-backend = "poetry.core.masonry.api"
